chore: remove deprecated flags